<!--전체적인 색상은 화이트, 포인트 색상은 gemini컬러로 포인트 줄예정-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="#72FFFFFF"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <!--하단 부분 버튼들 가운데 AI 버튼만 다른 색으로 제작 예정-->
    <Button
        android:id="@+id/Explore"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.2"
        android:background="#6EDCFD"
        android:text="@string/explore"
        android:contentDescription="@string/explore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/Go"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.2"
        android:background="#6EDCFD"
        android:text="@string/go"
        android:contentDescription="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/Explore"/>

    <Button
        android:id="@+id/Ai"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.2"
        android:background="#00BDF6"
        android:text="@string/ai"
        android:contentDescription="@string/ai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/Go"/>

    <Button
        android:id="@+id/Saved"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.2"
        android:background="#6EDCFD"
        android:text="@string/saved"
        android:contentDescription="@string/saved"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/Ai"/>

    <Button
        android:id="@+id/Updates"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.2"
        android:background="#6EDCFD"
        android:text="@string/updates"
        android:contentDescription="@string/updates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/Saved"/>

    <!--검색창 제작 구글 지도 같은 음성 검색 버튼 제작안 할 예정 음성 검색은 AI탭 에서-->

    <SearchView
        android:id="@+id/Search"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#5E6B6B6B"
        android:queryHint="Search Here"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--검색창 아래의 장소 카테고리 누르면 검색창에 올라가게끔 *구글맵 참고*-->

    <HorizontalScrollView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/Search"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <!--첫번쨰 버튼에는 Gemini색으로 그라데이션 입힐예정-->
            <Button
                android:id="@+id/Cat1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/ai_pick"
                android:background="#8600FFD9"
                />
            <Button
                android:id="@+id/Cat2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/coffee"
                android:background="#86D0D0D0" />
            <Button
                android:id="@+id/Cat3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/restaurant"
                android:background="#86D0D0D0"
                 />
            <Button
                android:id="@+id/Cat4"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/gas"
                android:background="#86D0D0D0" />
            <Button
                android:id="@+id/Cat5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/shopping"
                android:background="#86D0D0D0" />
            <Button
                android:id="@+id/More"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/more"
                android:background="#86D0D0D0" />
        </LinearLayout>
    </HorizontalScrollView>

    <ToggleButton
        android:id="@+id/myLocation"
        android:padding="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:textSize="4pt"
        android:textOn="@string/other_location"
        android:textOff="@string/my_location"
        app:layout_constraintBottom_toTopOf="@id/route"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/route"
        android:padding="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:layout_margin="10dp"
        android:textSize="4pt"
        android:text="@string/route"
        android:background="#00FFD9"
        app:layout_constraintBottom_toTopOf="@id/Updates"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>


